charts/mediaserver/mylarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mylarr
  labels:
    app: mylarr
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: mylarr
  template:
    metadata:
      labels:
        app: mylarr
    spec:
      containers:
        - name: mylarr
          image: "lscr.io/linuxserver/mylar3:0.8.0"
          imagePullPolicy: IfNotPresent
          readinessProbe:
            tcpSocket:
              port: 8090
            initialDelaySeconds: 10
            periodSeconds: 20
          ports:
            - name: http
              containerPort: 8090
              protocol: TCP
          volumeMounts:
            - name: mediaserver-volume
              mountPath: "/config"
              subPath: "config/mylarr"
            - name: mediaserver-volume
              mountPath: "/downloads"
              subPath: "downloads"
            - name: mediaserver-volume
              mountPath: "/comics"
              subPath: "media/comics"
      volumes:
        - name: mediaserver-volume
          hostPath:
            path: /mnt/media
