charts/mediaserver/mylarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mylarr
  labels:
    app: mylarr
spec:
  type: ClusterIP
  ports:
    - port: 8090
      targetPort: 8090
      protocol: TCP
      name: http
  selector:
    app: mylarr
