charts/mediaserver/mylarr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mylarr
spec:
  parentRefs:
  - name: traefik-gateway
    namespace: traefik
  hostnames:
  - mylarr.int.imdevinc.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: mylarr
      namespace: mediaserver
      port: 8090
